--- a/tap-music-react/src/components/pagination/pagination.css
+++ b/tap-music-react/src/components/pagination/pagination.css
@@ -9,7 +9,6 @@
   font-size: 15px;
   padding: 10px 5px;
   border-radius: 20px;
-  z-index: 1;
 }
 
 .skip-pagination__span {
